// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFabric renders and reorders children 1`] = `
"11
 RCTView null
   RCTView {\\"title\\":\\"a\\"}
   RCTView {\\"title\\":\\"b\\"}
   RCTView {\\"title\\":\\"c\\"}
   RCTView {\\"title\\":\\"d\\"}
   RCTView {\\"title\\":\\"e\\"}
   RCTView {\\"title\\":\\"f\\"}
   RCTView {\\"title\\":\\"g\\"}
   RCTView {\\"title\\":\\"h\\"}
   RCTView {\\"title\\":\\"i\\"}
   RCTView {\\"title\\":\\"j\\"}
   RCTView {\\"title\\":\\"k\\"}
   RCTView {\\"title\\":\\"l\\"}
   RCTView {\\"title\\":\\"m\\"}
   RCTView {\\"title\\":\\"n\\"}
   RCTView {\\"title\\":\\"o\\"}
   RCTView {\\"title\\":\\"p\\"}
   RCTView {\\"title\\":\\"q\\"}
   RCTView {\\"title\\":\\"r\\"}
   RCTView {\\"title\\":\\"s\\"}
   RCTView {\\"title\\":\\"t\\"}"
`;

exports[`ReactFabric renders and reorders children 2`] = `
"11
 RCTView null
   RCTView {\\"title\\":\\"m\\"}
   RCTView {\\"title\\":\\"x\\"}
   RCTView {\\"title\\":\\"h\\"}
   RCTView {\\"title\\":\\"p\\"}
   RCTView {\\"title\\":\\"g\\"}
   RCTView {\\"title\\":\\"w\\"}
   RCTView {\\"title\\":\\"f\\"}
   RCTView {\\"title\\":\\"r\\"}
   RCTView {\\"title\\":\\"a\\"}
   RCTView {\\"title\\":\\"l\\"}
   RCTView {\\"title\\":\\"k\\"}
   RCTView {\\"title\\":\\"e\\"}
   RCTView {\\"title\\":\\"o\\"}
   RCTView {\\"title\\":\\"i\\"}
   RCTView {\\"title\\":\\"v\\"}
   RCTView {\\"title\\":\\"c\\"}
   RCTView {\\"title\\":\\"s\\"}
   RCTView {\\"title\\":\\"t\\"}
   RCTView {\\"title\\":\\"z\\"}
   RCTView {\\"title\\":\\"y\\"}"
`;

exports[`ReactFabric should call complete after inserting children 1`] = `
Array [
  "RCTView {\\"foo\\":\\"a\\"}
  RCTView {\\"foo\\":\\"b\\"}",
]
`;

exports[`ReactFabric should only pass props diffs to FabricUIManager.cloneNode 1`] = `
"11
 RCTText {\\"foo\\":\\"a\\",\\"bar\\":\\"b\\"}
   RCTRawText {\\"text\\":\\"1\\"}"
`;

exports[`ReactFabric should only pass props diffs to FabricUIManager.cloneNode 2`] = `
"11
 RCTText {\\"foo\\":\\"b\\",\\"bar\\":\\"b\\"}
   RCTRawText {\\"text\\":\\"2\\"}"
`;
